[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iripau"
version = "1.1.6"
dependencies = [
  "curlify",
  "psutil"
]
requires-python = ">=3.7"
authors = [
  {name = "Ricardo Quezada"},
]
maintainers = [
  {name = "Ricardo Quezada"}
]
description = "Python utilities focused on command execution"
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE"]
keywords = ["subprocess", "command", "local", "remote", "ssh", "Linux", "real-time", "log", "logging", "threading", "utilities"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python"
]

[project.urls]
Documentation = "https://ricardo-galo.github.io/iripau"
Repository = "https://github.com/ricardo-galo/iripau"
Issues = "https://github.com/ricardo-galo/iripau/issues"
Changelog = "https://github.com/ricardo-galo/iripau/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]
include = ["iripau", "iripau.command"]
